# opengl-project

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Model3D.cpp  RainSystem.hpp  main.cpp
models/: mirror-edge-bake.mtl  mirror-edge-bake1.mtl  mirror-edge-bake_final.mtl  mirror.mtl
shaders/: basic.frag  basic.vert  fxaa.frag  fxaa.vert  motionBlur.frag  rain.frag  rain.vert  shader.frag  shader.vert  shaderPPL.frag  shaderPPL.vert  skyboxShader.frag  skyboxShader.vert
